# primes

./: CMakeLists.txt  README.md
src/: 1-naive.cpp  2-basic-optimization.cpp  3-elimination-magic.cpp  benchmark.cpp  passvalue.h  primesettings.h  timing.h  utils.h
